--- a/style.css
+++ b/style.css
@@ -5,9 +5,16 @@
 
 .body {
   font: sans-serif;
-  background: #ffbe00;
+  background-color: #ffbe00;
   padding: 1rem;
+  transition: background-color .2s ease;
 }
+
+/* @media only screen and (max-width: 640px) {
+    .body{
+        background-color: blue;
+    }
+} */
 
 .content {
   display: flex;
