--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@
     margin-right: auto;
     box-shadow: #000;
     transform: translateX(400%);
-    transition: transform 0.4s ease;
+    transition: transform .7s ease;
   }
   
   .show {
